--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-streamlit
-pandas
+streamlit>=1.30.0
+pandas>=2.2.0
+numpy>=1.26.0
+plotly>=5.19.0
+lxml>=5.1.0
+scikit-learn>=1.4.0
+watchdog>=4.0.0
+python-dateutil>=2.8.2
